tests/ui/interior-mutability/interior-mutability.stderr
error[E0277]: the type `UnsafeCell<i32>` may contain interior mutability and a reference may not be safely transferrable across a catch_unwind boundary
  --> $DIR/interior-mutability.rs:8:18
   |
LL |     catch_unwind(|| { x.set(23); });
   |     ------------ ^^^^^^^^^^^^^^^^^ `UnsafeCell<i32>` may contain interior mutability and a reference may not be safely transferrable across a catch_unwind boundary
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `Cell<i32>`, the trait `RefUnwindSafe` is not implemented for `UnsafeCell<i32>`
note: required because it appears within the type `Cell<i32>`
  --> $SRC_DIR/core/src/cell.rs:LL:COL
   = note: required for `&Cell<i32>` to implement `UnwindSafe`
note: required because it's used within this closure
  --> $DIR/interior-mutability.rs:8:18
   |
LL |     catch_unwind(|| { x.set(23); });
   |                  ^^
note: required by a bound in `std::panic::catch_unwind`
  --> $SRC_DIR/std/src/panic.rs:LL:COL
   = note: the full name for the type has been written to '$TEST_BUILD_DIR/interior-mutability.long-type-$LONG_TYPE_HASH.txt'
   = note: consider using `--verbose` to print the full type name to the console

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
